--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/node": "^18.11.17",
+    "@types/react": "^18.0.26",
     "next": "13.1.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "eslint": "8.30.0",
